# DeepResearch-Agent-LangGraph

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  docker-compose.yml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  pyproject.toml
backend/backend/data/notes/: note_20260619_160037_0.md  note_20260619_160916_1.md  note_20260619_161536_2.md  note_20260619_162232_3.md  notes_index.json
backend/src/: __init__.py  agent.py  config.py  llm.py  main.py  models.py  prompts.py  utils.py
backend/src/notes/: note_20260506_141230_0.md  note_20260506_141508_1.md  note_20260506_144346_2.md  note_20260506_144421_3.md  note_20260506_144506_4.md  note_20260506_145353_5.md  note_20260506_150000_6.md  note_20260506_150008_7.md  note_20260506_151556_8.md  note_20260506_151606_9.md  note_20260506_151820_10.md  note_20260506_152023_11.md  note_20260523_001826_12.md  notes_index.json
backend/src/services/: event_adapter.py  notes.py  planner.py  reporter.py  researcher.py  search.py  summarizer.py  text_processing.py
backend/src/tools/: note_tool.py  search_tool.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_sse_contract.py
backend/tests/unit/: test_config.py  test_models.py  test_planner.py  test_prompts.py  test_reporter.py  test_researcher.py  test_search.py
examples/: 01-local-llm-research.md  01-local-llm-research.zh-CN.md  02-advanced-search.md  02-advanced-search.zh-CN.md  README.md  (+1 more)
(+28 files in other folders)
